# nintendo-pi

./: CLAUDE.md  README.md  combo.py  enable_procon2.py  macro.py  macrotool.py  mitm.py  requirements.txt  web_server.py
.claude/agents/: verify-build.md
.claude/skills/code-simplify/: SKILL.md
.claude/skills/docs-update/: SKILL.md
.claude/skills/error-handling/: SKILL.md
.claude/skills/naming/: SKILL.md
.claude/skills/test-coverage/: SKILL.md
nintendo-pi-rs/: Cargo.toml  Cross.toml  Dockerfile.aarch64
nintendo-pi-rs/src/: calibration.rs  combo.rs  input.rs  led.rs  main.rs
nintendo-pi-rs/src/bt/: emulator.rs  mod.rs  protocol.rs  sdp.rs
nintendo-pi-rs/src/macro_engine/: controller.rs  mod.rs  player.rs  recorder.rs  storage.rs
nintendo-pi-rs/src/usb/: hid.rs  init.rs  mod.rs
nintendo-pi-rs/src/web/: mod.rs  state.rs
nintendo-pi-rs/static/: index.html
templates/: index.html
