[package]
name = "nintendo-pi"
version = "0.1.0"
edition = "2021"

[dependencies]
# USB HID reading (pure Rust, no C deps)
hidapi = { version = "2.6", default-features = false, features = ["linux-native"] }
# USB bulk transfers for init sequence + LED writes
nusb = "0.1"
# Bluetooth L2CAP
bluer = { version = "0.17", features = ["l2cap"] }
# D-Bus for SDP registration, adapter config
zbus = "4"
# Async runtime (required by bluer, axum, zbus)
tokio = { version = "1", features = ["full"] }
# Web server
axum = { version = "0.7", features = ["ws"] }
# Macro mmap
memmap2 = "0.9"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# CLI
clap = { version = "4", features = ["derive"] }
# Futures utilities
futures = "0.3"
# Error handling
anyhow = "1"
libc = "0.2.181"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
